feat: Remove artificial time delay between consecutive particle group update operations.